<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>WorkspaceDialog</class>
 <widget class="QDialog" name="WorkspaceDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>480</width>
    <height>236</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Select PiSiDo Workspace</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="2" column="2">
    <widget class="QPushButton" name="pb_browse_OD">
     <property name="text">
      <string>&amp;Browse</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="QLineEdit" name="le_Output_Dir">
     <property name="toolTip">
      <string>Produced build files ad pisi packages will save under here</string>
     </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="lbl_output_dir_2">
     <property name="text">
      <string>Archives Dir</string>
     </property>
    </widget>
   </item>
   <item row="6" column="1">
    <widget class="QLineEdit" name="le_Packages_Dir">
     <property name="toolTip">
      <string>Produced build files ad pisi packages will save under here</string>
     </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="6" column="2">
    <widget class="QPushButton" name="pb_browse_PD">
     <property name="text">
      <string>&amp;Browse</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QLineEdit" name="le_workspace">
     <property name="toolTip">
      <string>Produced build files ad pisi packages will save under here</string>
     </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="lbl_output_dir">
     <property name="text">
      <string>Output Dir</string>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QPushButton" name="pb_browse">
     <property name="text">
      <string>&amp;Browse</string>
     </property>
    </widget>
   </item>
   <item row="4" column="2">
    <widget class="QPushButton" name="pb_browse_AD">
     <property name="text">
      <string>&amp;Browse</string>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="lbl_workspace">
     <property name="text">
      <string>Workspace</string>
     </property>
    </widget>
   </item>
   <item row="6" column="0">
    <widget class="QLabel" name="lbl_output_dir_3">
     <property name="text">
      <string>Packages Dir</string>
     </property>
    </widget>
   </item>
   <item row="4" column="1">
    <widget class="QLineEdit" name="le_Archives_Dir">
     <property name="toolTip">
      <string>Produced build files ad pisi packages will save under here</string>
     </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="9" column="0" colspan="3">
    <widget class="QCheckBox" name="check_not_ask">
     <property name="toolTip">
      <string>You can change workspace form menu</string>
     </property>
     <property name="text">
      <string>Don't ask workspace again.</string>
     </property>
    </widget>
   </item>
   <item row="11" column="0" colspan="3">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>251</width>
         <height>19</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="pb_ok">
       <property name="text">
        <string>&amp;Ok</string>
       </property>
       <property name="default">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pb_exit">
       <property name="toolTip">
        <string>Exit application</string>
       </property>
       <property name="text">
        <string>E&amp;xit</string>
       </property>
       <property name="autoDefault">
        <bool>false</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item row="0" column="0" colspan="3">
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Please select a workspace. All packages and their build files will be created in here.</string>
     </property>
     <property name="wordWrap">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="8" column="0" colspan="3">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>33</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>check_not_ask</tabstop>
  <tabstop>pb_ok</tabstop>
  <tabstop>pb_exit</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>pb_ok</sender>
   <signal>clicked()</signal>
   <receiver>WorkspaceDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>422</x>
     <y>230</y>
    </hint>
    <hint type="destinationlabel">
     <x>242</x>
     <y>153</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pb_exit</sender>
   <signal>clicked()</signal>
   <receiver>WorkspaceDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>474</x>
     <y>230</y>
    </hint>
    <hint type="destinationlabel">
     <x>407</x>
     <y>100</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
